--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									</tr>
 									<tr>
 										<td style="width:12%">2024</td>
-										<td>CSD 392: Language Development and Usage (Instructor: Dr. Elizbeth Norton)
+										<td>CSD 392: Language Development and Usage (Instructor: Dr. Elizabeth Norton)
 											<br>
 											Guest Lecture: <i>"Theories of Dyslexia"</i> <b><a href="https://drive.google.com/file/d/11rgX2x8423NxJuIIRape9y654j1s-GlQ/view?usp=drive_link">[slides]</a></b>
 										</td>
