--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 									<tr>
 										<td style="width:12%">under review</td>
 										<td>Oh, J., <b>Kim, J.</b>, Kiaer, J., Kang, J., Oh, J., & Lee, S. The Ungrammatical Brain: A P600 Event-Related Potential Study on the Processing of Korean Indirect Honorifics. <i>Neuroimage</i>. 
-											<b><a href="https://doi.org/">[Paper]</a></b>
+											<b><a href="https://doi.org/">[paper]</a></b>
 										</td>
 									</tr>
 									</table>
@@ -169,7 +169,7 @@
 									<tr>
 										<td style="width:12%">2021</td>
 										<td>"Indirect Honorifics in Korean: A Linguistic Study Using Brain Science and Experimental Psychology Methodology". Poster at Seoul National University Independent Research Program Symposium; Seoul, South Korea; January 2022.
-											<b><a href="https://doi.org/">[Poster]</a></b>
+											<b><a href="https://doi.org/">[poster]</a></b>
 										</td>
 									</tr>
 									</table>
