--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 									<p>
 									<img src="images/predictors.png" alt="Predictors" class="responsive-img">
 									<ul>
-										<li>neurobiological and behavioral predictors of reading difficulties</li>
-										<li>processes and mechanisms underlying reading in the brain</li>
-										<li>development of decoding ability and reading fluency in children</li>
+										<li>Neurobiological and behavioral predictors of reading difficulties</li>
+										<li>Processes and mechanisms underlying reading in the brain</li>
+										<li>Development of decoding ability and reading fluency in children</li>
 									  </ul>
 									</p>
 								</div>
@@ -100,14 +100,14 @@
 									</tr>
 									<tr>
 										<td style="width:12%">2024</td>
-										<td><b>Language, Education, and Reading Neuroscience (LEARN) Lab</b> (PI: Dr. Elizbeth Norton)
+										<td><b>Language, Education, and Reading Neuroscience (LEARN) Lab</b> (PI: Dr. Elizabeth Norton)
 											<br>
 											<i>Conducted literature review of children's self-perceptions of their reading skill</i>
 										</td>
 									</tr>
 									<tr>
 										<td style="width:12%">2023</td>
-										<td><b>Language, Education, and Reading Neuroscience (LEARN) Lab</b> (PI: Dr. Elizbeth Norton)
+										<td><b>Language, Education, and Reading Neuroscience (LEARN) Lab</b> (PI: Dr. Elizabeth Norton)
 											<br>
 											<i>Established a system utilizing an AI speech recognition program (Whisper) to automatically transcribe child speech</i>
 										</td>
