--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jiyoon Kim</a></h1>
-					<p>PhD Student<br />
+					<p>[ˈd͡ʒi.jun]<br />
+					PhD Student<br />
 					Communication Sciences and Disorders<br />
 					Northwestern University</p>
 				</header>
@@ -264,7 +265,7 @@
 						<!-- Six -->
 							<section id="resources">
 								<div class="container">
-									
+									<!--
 									<h3>Resources</h3>
 									<p>
 										<ul>
@@ -272,6 +273,7 @@
 											<li>Popular science article: <i>"Solving the mystery of dyslexia: insights from the double-deficit hypothesis"</i> <b><a href="https://drive.google.com/file/d/1bImnaFJE8qXhT9a4XcTAx-hMe2SyDQ1K/view?usp=drive_link">[link]</a></b></li>
 										  </ul>
 									</p>
+									-->
 								</div>
 							</section>
 
