--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jiyoon Kim</a></h1>
-					<p>[ˈd͡ʒi.jun]<br />
+					<!--<p style >IPA: [ˈd͡ʒi.jun]<br />-→
 					PhD Student<br />
 					Communication Sciences and Disorders<br />
 					Northwestern University</p>
@@ -265,8 +265,9 @@
 						<!-- Six -->
 							<section id="resources">
 								<div class="container">
-									<!--
+									
 									<h3>Resources</h3>
+									<!--
 									<p>
 										<ul>
 											<li>Introductory paragraph: <i>"The thread of automaticity in the tapestry of reading"</i> <b><a href="https://drive.google.com/file/d/1p9p0BZk86c5dPJvYEIjZC93wl6KgCODI/view?usp=drive_link">[link]</a></b></li>
