--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 				<header>
 					<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Jiyoon Kim</a></h1>
-					<!--<p style >IPA: [ˈd͡ʒi.jun]<br />-→
-					PhD Student<br />
+					<p>PhD Student<br />
 					Communication Sciences and Disorders<br />
 					Northwestern University</p>
 				</header>
