--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</div>
 								<div class="container">
 									<h3>About</h3>
-									<p>Hello there! I am a PhD student in Communication Sciences and Disorders at Northwestern University. I am a member of the <a href="https://learnlab.northwestern.edu/">Language, Education, and Reading Neuroscience (LEARN) Lab</a>, supervised by Dr. Elizabeth Norton. My research focuses on understanding the processes and mechanisms underlying reading development, with a specific interest in identifying behavioral and neurobiological predictors of reading difficulties in children.
+									<p>Hi! I am a PhD student in Communication Sciences and Disorders at Northwestern University. I am a member of the <a href="https://learnlab.northwestern.edu/">Language, Education, and Reading Neuroscience (LEARN) Lab</a>, working with Dr. Elizabeth Norton. My research focuses on understanding the processes and mechanisms underlying reading development, with a specific interest in identifying behavioral and neurobiological predictors of reading difficulties in children.
 									<b><a style="color: #594470;" href="https://drive.google.com/file/d/1Y250cijascDswBXM8m0MZIFJdHqY49qE/view?usp=drive_link">[My CV]</a></b></p>
 									<h3>Education</h3>
 
