--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 										<td style="width:12%">2024</td>
 										<td><b>Reading, Education, and Development (READ) Lab</b> (PI: Dr. Mercedes Spencer)
 											<br>
-											<i>Conducted meta-analysis of executive function skills in children with Specific Reading Comprehension Deficit</i>
+											<i>Conducted a meta-analysis of executive function skills in children with Specific Reading Comprehension Deficit</i>
 										</td>
 									</tr>
 									<tr>
 										<td style="width:12%">2024</td>
 										<td><b>Language, Education, and Reading Neuroscience (LEARN) Lab</b> (PI: Dr. Elizabeth Norton)
 											<br>
-											<i>Conducted literature review of children's self-perceptions of their reading skill</i>
+											<i>Conducted a literature review of children's self-perception of their reading skill</i>
 										</td>
 									</tr>
 									<tr>
